View Issue Details

IDProjectCategoryView StatusLast Update
0026525Open CASCADEOCCT:Modeling Algorithmspublic2016-04-20 15:48
ReporterpkvAssigned Tokgv  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.0.0 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026525: Wrong result obtained by curve / surface intersection algorithm.
DescriptionWrong result obtained by curve / surface intersection algorithm.

The algorithm: IntCurveSurface_Inter

The problem:
There is no result in the case of untrimmed surface,
whereas
there is correct result in the case when the surface is trimmed.
Steps To Reproducerestore a b1
restore b b2

mksurface sb1 b1
trimv sb1t sb1 -30000 30000
mkface b1t sb1t

explode b2 e

#----------------------------
# Case 1. The curve is from the edge b2_3
# 1.1 The face b1 is based on untrimmed surface
bcs p b2_3 b1
# Result:
Number of intersection points found: 0
#
# 1.2 The face b1 is based on trimmed surface
bcs pt b2_3 b1t
# Result:
Number of intersection points found: 2
point pt_1 48.4205 -22.5336 82.7431
point pt_2 32.5621 -5.89907 82.7431
#----------------------------
# Case 2. The curve is from the edge: b2_1
# 2.1 The face b1 is based on untrimmed surface
bcs p b2_1 b1
# Result:
Number of intersection points found: 0
#
# 2.2 The face b1 is based on trimmed surface
bcs pt b2_1 b1t
# Result:
Number of intersection points found: 2
point pt_1 39.0504 -12.8696 82.6099
point pt_2 43.1172 -17.16 82.6048

Additional information
and documentation updates
1. The command bcs is in the file a.cxx
2. The shapes a, b can be found in the issue:
http://tracker.dev.opencascade.org/view.php?id=26520
TagsNo tags attached.
Test case numberbugs modalg_6 bug26525_1, bug26525_2, bug26525_3, bug26525_4

Attached Files

  • a.cxx (2,416 bytes)

Activities

pkv

2015-08-06 10:37

developer  

a.cxx (2,416 bytes)

git

2015-09-15 12:23

administrator   ~0045614

Branch CR26525 has been created by aml.

SHA-1: 0bd2763c54640a08237c58cf6d920b9fa0afe4c0


Detailed log of new commits:

Author: aml
Date: Tue Sep 15 09:45:39 2015 +0300

    0026525: Wrong result obtained by curve / surface intersection algorithm.
    
    Added protection from double overflow caused by untrimmed parameters space.
    Obsolete code deleted.

aml

2015-09-15 12:24

developer   ~0045615

Dear msv,

Please check current state of branch CR26525.

msv

2015-09-15 18:59

developer   ~0045668

380: // Protection from double type overflow.
381: // This may happen inside square magnitude computation based on normal,
382: // which was computed on bound parameteres (bug26656).

Comments contain irrelevant to this patch bug number bug26656.

msv

2015-09-15 19:00

developer   ~0045669

No other remarks, so the patch can be tested.

git

2015-09-16 07:16

administrator   ~0045676

Branch CR26525 has been updated forcibly by aml.

SHA-1: 1a29f73aa58b7f51fad4b28295811aa13950ceb8

aml

2015-09-16 07:19

developer   ~0045677

Remarks fixed,

Please test.

mkv

2015-09-17 13:15

tester   ~0045777

Dear BugMaster,
Branch CR26525 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 1a29f73aa58b7f51fad4b28295811aa13950ceb8

Number of compiler warnings:

occt component :
Linux: 15 (15 on master)
Windows: 0 (0 on master)

products component :
Linux: 39 (39 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:


Testing on Linux:
occt component :
Total MEMORY difference: 92334217 / 92773212 [-0.47%]
Total CPU difference: 17923.219999998957 / 17943.959999999086 [-0.12%]
products component :
Total MEMORY difference: 25844563 / 25875135 [-0.12%]
Total CPU difference: 7253.909999999981 / 7185.6699999999955 [+0.95%]

Testing on Windows:
occt component :
Total MEMORY difference: 57715936 / 57708424 [+0.01%]
Total CPU difference: 16409.698389698915 / 16459.571909399227 [-0.30%]
products component :
Total MEMORY difference: 16788968 / 16788939 [+0.00%]
Total CPU difference: 5587.534617299966 / 5566.7084837999655 [+0.37%]

There are no differences in images found by testdiff.

mkv

2015-09-17 13:16

tester   ~0045778

Dear aml,
could you please create new draw-command for testing this issue.

git

2015-09-22 12:16

administrator   ~0045987

Branch CR26525_2 has been created by aml.

SHA-1: 787a5fe5190466c2cc5a37ea4be7d0b7d5c3aa4c


Detailed log of new commits:

Author: aml
Date: Tue Sep 22 12:14:09 2015 +0300

    Draw command OCC26525 added.

git

2015-09-22 12:17

administrator   ~0045988

Branch CR26525_2 has been updated forcibly by aml.

SHA-1: 40b883e0eeb292ec66a550fcb2561081467734fc

aml

2015-09-22 12:18

developer   ~0045989

Dear msv,

Please check current state of branch CR26525_2 with newly added command for testing.

msv

2015-09-23 10:03

developer   ~0046021

Reviewed.

mkv

2015-09-23 19:05

tester   ~0046066

Dear BugMaster,
Branch CR26525_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 40b883e0eeb292ec66a550fcb2561081467734fc

Number of compiler warnings:

occt component :
Linux: 15 (15 on master)
Windows: 0 (0 on master)

products component :
Linux: 39 (39 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR26525-2-master-occt-64/Debian70-64/bugs/modalg_6/bug26525_1.html
http://occt-tests/CR26525-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26525_1.html
bugs modalg_6 bug26525_1: OK
http://occt-tests/CR26525-2-master-occt-64/Debian70-64/bugs/modalg_6/bug26525_2.html
http://occt-tests/CR26525-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26525_2.html
bugs modalg_6 bug26525_2: OK
http://occt-tests/CR26525-2-master-occt-64/Debian70-64/bugs/modalg_6/bug26525_3.html
http://occt-tests/CR26525-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26525_3.html
bugs modalg_6 bug26525_3: OK
http://occt-tests/CR26525-2-master-occt-64/Debian70-64/bugs/modalg_6/bug26525_4.html
http://occt-tests/CR26525-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26525_4.html
bugs modalg_6 bug26525_4: OK

Testing on Linux:
occt component :
Total MEMORY difference: 92644616 / 92150098 [+0.54%]
Total CPU difference: 18875.149999998866 / 18837.639999998984 [+0.20%]
products component :
Total MEMORY difference: 25923779 / 25971259 [-0.18%]
Total CPU difference: 7397.30999999999 / 7206.699999999996 [+2.64%]

Testing on Windows:
occt component :
Total MEMORY difference: 56809103 / 56825790 [-0.03%]
Total CPU difference: 17472.892004998994 / 16810.58975949913 [+3.94%]
products component :
Total MEMORY difference: 16779223 / 16784150 [-0.03%]
Total CPU difference: 5864.046389799985 / 5525.21221779996 [+6.13%]

There are no differences in images found by testdiff.

git

2015-09-23 19:05

administrator   ~0046067

Branch CR26525_2 has been updated by mkv.

SHA-1: 7d3b75aa6f26d01858b0ad8ad0825e0ecbe6e1fa


Detailed log of new commits:

Author: mkv
Date: Wed Sep 23 19:04:53 2015 +0300

    Test cases for issue CR26525

mkv

2015-09-23 19:06

tester   ~0046068

Dear aml,
could you please review following test case
bugs modalg_6 bug26525_1, bug26525_2, bug26525_3, bug26525_4

aml

2015-09-24 07:44

developer   ~0046072

Dear mkv,
test cases bugs modalg_6 bug26525_1, bug26525_2, bug26525_3, bug26525_4 are OK.

mkv

2015-09-24 12:01

tester   ~0046079

Dear BugMaster,
Branch CR26525_2 is TESTED.

git

2015-10-16 16:57

administrator   ~0047074

Branch CR26525 has been deleted by kgv.

SHA-1: 1a29f73aa58b7f51fad4b28295811aa13950ceb8

git

2015-10-16 16:57

administrator   ~0047075

Branch CR26525_2 has been deleted by kgv.

SHA-1: 7d3b75aa6f26d01858b0ad8ad0825e0ecbe6e1fa

Related Changesets

occt: master 81b47143

2015-09-24 10:53:09

aml


Committer: kgv Details Diff
0026525: Wrong result obtained by curve / surface intersection algorithm.

Added protection from double overflow caused by untrimmed parameters space.
Obsolete code deleted.

Draw command OCC26525 added.

Test cases for issue CR26525
Affected Issues
0026525
mod - src/IntCurveSurface/IntCurveSurface_Inter.gxx Diff File
mod - src/QABugs/QABugs_19.cxx Diff File
add - tests/bugs/modalg_6/bug26525_1 Diff File
add - tests/bugs/modalg_6/bug26525_2 Diff File
add - tests/bugs/modalg_6/bug26525_3 Diff File
add - tests/bugs/modalg_6/bug26525_4 Diff File

Issue History

Date Modified Username Field Change
2015-08-06 10:37 pkv New Issue
2015-08-06 10:37 pkv Assigned To => msv
2015-08-06 10:37 pkv File Added: a.cxx
2015-08-06 10:39 pkv Status new => assigned
2015-08-07 09:30 msv Assigned To msv => aml
2015-09-14 14:07 aml Steps to Reproduce Updated
2015-09-15 12:23 git Note Added: 0045614
2015-09-15 12:24 aml Note Added: 0045615
2015-09-15 12:24 aml Assigned To aml => msv
2015-09-15 12:24 aml Status assigned => resolved
2015-09-15 18:59 msv Note Added: 0045668
2015-09-15 18:59 msv Assigned To msv => aml
2015-09-15 18:59 msv Status resolved => assigned
2015-09-15 19:00 msv Note Added: 0045669
2015-09-16 07:16 git Note Added: 0045676
2015-09-16 07:17 aml Status assigned => resolved
2015-09-16 07:19 aml Note Added: 0045677
2015-09-16 07:19 aml Assigned To aml => bugmaster
2015-09-16 07:19 aml Status resolved => reviewed
2015-09-16 15:55 mkv Assigned To bugmaster => mkv
2015-09-17 13:15 mkv Note Added: 0045777
2015-09-17 13:16 mkv Note Added: 0045778
2015-09-17 13:16 mkv Assigned To mkv => aml
2015-09-17 13:16 mkv Status reviewed => assigned
2015-09-22 12:16 git Note Added: 0045987
2015-09-22 12:17 git Note Added: 0045988
2015-09-22 12:18 aml Note Added: 0045989
2015-09-22 12:18 aml Assigned To aml => msv
2015-09-22 12:18 aml Status assigned => resolved
2015-09-23 10:03 msv Note Added: 0046021
2015-09-23 10:03 msv Assigned To msv => bugmaster
2015-09-23 10:03 msv Status resolved => reviewed
2015-09-23 11:58 mkv Assigned To bugmaster => mkv
2015-09-23 19:05 mkv Note Added: 0046066
2015-09-23 19:05 git Note Added: 0046067
2015-09-23 19:06 mkv Note Added: 0046068
2015-09-23 19:06 mkv Assigned To mkv => aml
2015-09-23 19:06 mkv Status reviewed => feedback
2015-09-23 19:06 mkv Test case number => bugs modalg_6 bug26525_1, bug26525_2, bug26525_3, bug26525_4
2015-09-24 07:43 aml Assigned To aml => mkv
2015-09-24 07:44 aml Note Added: 0046072
2015-09-24 12:01 mkv Note Added: 0046079
2015-09-24 12:01 mkv Assigned To mkv => bugmaster
2015-09-24 12:01 mkv Status feedback => tested
2015-09-28 12:58 kgv Changeset attached => occt master 81b47143
2015-09-28 12:58 kgv Assigned To bugmaster => kgv
2015-09-28 12:58 kgv Status tested => verified
2015-09-28 12:58 kgv Resolution open => fixed
2015-10-16 16:57 git Note Added: 0047074
2015-10-16 16:57 git Note Added: 0047075
2016-04-20 15:44 aiv Fixed in Version => 7.0.0
2016-04-20 15:48 aiv Status verified => closed