0026525: Wrong result obtained by curve / surface intersection algorithm.

Added protection from double overflow caused by untrimmed parameters space.
Obsolete code deleted.

Draw command OCC26525 added.

Test cases for issue CR26525